--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,23 @@ html, body, div {
 	margin: 0;
 	color: black;
 	font-family: helvetica, arial;
+	color: #58585a;
 }
 
-img {border: 0; padding: 0; margin: 0;}
-a {color: #58585a; text-decoration: none;}
+img { border: 0; padding: 0; margin: 0; }
+a { color: #000; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
-h1 { padding: 0; margin: 0; }
+h1 { 
+	padding: 0;
+	margin: 0;
+}
+
+h2 {
+	font-weight: normal;
+	margin-top: 0;
+	color: #49833d;
+}
 
 #page { margin: 0 auto; width: 960px; }
 
@@ -20,13 +30,15 @@ h1 { padding: 0; margin: 0; }
 
 #header #logo { position: absolute; left: 0; top: 0; }
 #header #motto { position: absolute; right: 0; bottom: 0; }
-#header #motto h1 a {
+#header #motto h1 {
 	font-weight: 100;
+	font-size: 1.95em;
 }
 
 #footer {
 	font-size: 10pt;
 	height: 300px;
+	padding-top: 20px;
 	/* overflow: hidden; /**/
 }
 
@@ -35,24 +47,41 @@ h1 { padding: 0; margin: 0; }
 	padding-top: 0;
 }
 
-#footer div.col {
-	float: left;
+#content {
+	padding: 40px 0 40px 0;
+}
+
+
+/* Class definitions */
+.sh { /*Single height*/
 	height: 300px;
+}
+
+div.col {
+	float: left;
 	width: 225px;
 	margin-right: 20px;
 }
 
-#footer div.col2 {
+div.col2 {
 	float: left;
-	height: 300px;
 	width: 470px;
 	margin-right: 20px;
 }
 
-#footer div.last {
+div.last {
 	margin: 0;
 }
 
-#content {
-	margin: 20px 0;
+div.hspace {
+	padding-bottom: 17px;
+}
+
+div.mozaik {
+	padding-bottom: 20px;
+	height: 225px;
+}
+div.mozaik img {
+	float: left;
+	margin-right: 20px;
 }
